Correction iphone - finitions 8

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -32,7 +32,7 @@ header{
     display: none;
     flex-flow: column wrap;
     width: 100vw;
-    height: 85vh;
+    height: 90vh;
     position: fixed;
     background-color: rgba(128,128,128,0);
     justify-content: space-evenly;
@@ -42,6 +42,9 @@ header{
     animation-direction: alternate;
     animation-name: slidein ;
     font-size: 0.85em;
+}
+.PageZ{
+    height: auto;
 }
 .Page footer a i {
     font-size: 1em;
@@ -404,7 +407,6 @@ header{
         align-items: center;
     }
     .Page{
-        height: 95vh;
         font-size: 1em;
     }
 }
